--- a/data_import/requirements.txt
+++ b/data_import/requirements.txt
@@ -1,6 +1,8 @@
+Jinja2==2.7.3
+MarkupSafe==0.23
 beautifulsoup4==4.2.1
-lxml==3.3.0
+lxml==3.4.0
 prompter==0.3.4
 psycopg2==2.5.2
-python-dwca-reader==0.5.0
+python-dwca-reader==0.6.0
 wsgiref==0.1.2
