--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -5,7 +5,7 @@ gem 'rails', '3.0.7'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'pg'
+gem 'pg', '0.17.1'
 
 gem "haml"
 gem "sass"
